register page added, list of hardcoded users on back-end changed from immutable list to mutable list.